home and service edits

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </a>
         </div>
       </div>
-      <div class="row" style="height: 100vh; background-image: url(images/icon_bg.png);">
+      <div class="row" style="height: 100vh; background-image: url(images/icon_bg.png); background-position: right -5em bottom -17em; background-repeat: no-repeat;">
         <div class="col-md-8 offset-md-2 d-flex align-content-center flex-wrap" id="pitch">
           <p id="elevatorPitch" style="opacity: 0;">
           Acceptitas is a holistic college application consulting and editing service that empowers students to identify and amplify their unique story across all their application materials. Founded by a current Harvard student, we offer our first hand experience in the college admissions process and strong narrative crafting skills at a fraction of the cost. We help students build their unique narrative, so that they can submit with confidence.
@@ -81,61 +81,18 @@
         </div>
       </div>
 
-      <!-- Services -->
+      <!-- Why us -->
       <div class="row band">
         <div class="col my-auto text-center">
-          <h1>Our Services</h1>
-        </div>
-      </div>
-      <br>
-      <div class="row" >
-        <div class="col-md-4 offset-md-2">
-          <img src="images/services/strategy.jpg" alt="strategy">
-          <br>
-          <br>
-          <h3>Strategy Consultations</h3>
-          <p>Together we will examine your life experiences, interests, and aspirations to start crafting your unique application narrative. After our meeting, you will receive an assessment of your current narrative, its strengths, areas for growth, and an action plan for refining your story across your application materials.
-</p>
-        </div>
-        <div class="col-md-4">
-          <img src="images/services/narrative.jpg" alt="narrative">
-          <br>
-          <br>
-          <h3>Narrative Assessment</h3>
-          <p>We review your current application packet materials, provide constructive feedback, and help you identify and amplify your strongest narratives. Part of this process is our signature mock admissions read which we use as a diagnostic test of your narrative’s strength.</p>
-        </div>
-      </div>
-      
-      <div class="row">
-        <div class="col-md-4 offset-md-2">
-          <img src="images/services/interview.jpg" alt="interview">
-          <br>
-          <br>
-          <h3>Mock Interviews</h3>
-          <p>Learn how to lean into your strengths and naturally support your overall application narrative through our mock interviews, conducted by someone who has successful first-hand experience. Each mock interview comes with an after-action report that identifies actionable areas of growth for the big day.</p>
-        </div>
-        <div class="col-md-4">
-          <img src="images/services/edits.jpg" alt="edits">
-          <br>
-          <br>
-          <h3>Last Minute Editing</h3>
-          <p>We provide last-minute essay and overall narrative feedback for driven students wanting to present the most compelling version of themself, and click the submit button with confidence.</p>
-        </div>
-
-      </div>
-      <!-- About -->
-      <div class="row band" >
-        <div class="col my-auto text-center">
-          <h1>About Acceptitas</h1>
+          <h1>Why Us</h1>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-md-8 offset-md-2">
-          <p>Our unique approach to college admissions and focus on bringing out the most compelling narrative from each student, was used successfully by founder Emmet Halm in his admissions process to Harvard and other peer institutions. Without access to expensive private college consultants, Emmet created his own strategic approach to college applications that emphasizes leaning into your personality and life experiences to create a narrative that is “unapologetically yourself.” At Acceptitas, we believe in unlocking the power within each student by helping them frame their life experiences and strengths into a unique and compelling application narrative. To better get to know Emmet and our company, click here.</p>
+          <p> REPHRASE THIS BUT KEEP SHORT: Ivy league's are looking for this. And the cost is great!</p>
         </div>
       </div>
-
       <!-- Call to Action -->
       <div class="row">
         <div class="col d-flex justify-content-center">
