--- a/about.html
+++ b/about.html
@@ -55,9 +55,15 @@
     </nav>
 
     <div class="container-fluid">
+      <div class="row band">
+        <div class="col my-auto text-center">
+          <h1>Our Mission</h1>
+        </div>
+      </div>
+      <br />
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-8 offset-md-2">
-          <h1>Our Mission</h1>
           <p>
             Acceptitas was founded by Emmet Halm to empower motivated students
             like him to dream big and find their own narrative through his
@@ -74,30 +80,26 @@
             contact us for our pro-bono work.
           </p>
 
-          <!-- Hover to different image -->
-          <img src="https://placeholder.com/150" />
         </div>
       </div>
       <div class="row">
         <div class="col-md-8 offset-md-2">
-          <h1>Hi, I'm Emmet!</h1>
+          <h3>Hi, I'm Emmet!</h3>
           <p>
             … is what Emmet would say with a big smile if this was written in
             the first person. Emmet is an undergraduate at Harvard who has a
             passion for helping others succeed, experience teaching, and
             first-hand experience in the college admissions process. With an eye
-            for engaging story-telling, Emmet studies History, writes about
+            for engaging story-telling, Emmet studies history, writes about
             politics, and frequently performs standup comedy at Harvard. He
             loves meeting new people, learning what motivates them, and helping
             them maximize their strengths.
           </p>
-          <!-- Hover to different image -->
-          <img src="https://placeholder.com/150" />
         </div>
       </div>
       <div class="row">
         <div class="col-md-8 offset-md-2">
-          <h1>Emmet's Narrative</h1>
+          <h3>Emmet's Narrative</h3>
           <p>
             Emmet struggled with learning differences in school and was
             cautioned that since writing and language learning would be too
