--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <br>
       <div class="row">
         <div class="col-md-8 offset-md-2">
-          <p> Acceptitas offers an effective, personal, and narrative-driven approach to college admissions with the first-hand experience of a Harvard student. Our methods, experience, and price distinguish us, but our passion defines us.</p>
+          <p> Acceptitas offers an effective, personal, and narrative-driven approach to college admissions with the first-hand experience of a Harvard student. Our methods, experience, and unbeatable price distinguish us, but our passion defines us.</p>
         </div>
       </div>
       <!-- Call to Action -->
