footer fix, services placeholder

--- a/services.html
+++ b/services.html
@@ -62,6 +62,13 @@
       </div>
       <br />
       <div class="row">
+        <div class="col-md-8 offset-md-2">
+          <p>
+            Overview here
+          </p>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-md-4 offset-md-2">
           <img src="images/services/strategy.jpg" alt="strategy" />
           <br />
