--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html"
               >Home <span class="sr-only">(current)</span></a
             >
@@ -47,12 +47,28 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
+    <div class="container-fluid">
+      <div class="row band">
+        <div class="col my-auto text-center">
+          <h1>Success Starts Here</h1>
+        </div>
+      </div>
+      <br />
+      <div class="row">
+        <div class="col-md-8 offset-md-2">
+          <p>
+            Placeholder text: On the fence about signing up? Give me a call or
+            email today and we can set up a free consulation!
+          </p>
+        </div>
+      </div>
+    </div>
     <!-- Footer -->
     <footer id="sticky-footer" class="py-4 text-white-50">
       <div class="container text-center">
