--- a/index.html
+++ b/index.html
@@ -89,8 +89,31 @@
       </div>
       <br>
       <div class="row">
+        <div class="col-sm-2 text-center offset-md-2">
+          <img src="images/services/icons/bulb.png" alt="">
+          &nbsp;
+          <h6>Strategy</h6>
+        </div>
+        <div class="col-sm-2 text-center">
+          <img src="images/services/icons/list.png" alt="">
+          &nbsp;
+          <h6>Narrative Assessment</h6>
+        </div>
+        <div class="col-sm-2 text-center">
+          <img src="images/services/icons/speech.png" alt="">
+          &nbsp;
+          <h6>Interviews</h6>
+        </div>
+        <div class="col-sm-2 text-center">
+          <img src="images/services/icons/pencil.png" alt="">
+          &nbsp;
+          <h6>Editing</h6>
+        </div>
+      </div>
+      &nbsp;
+      <div class="row">
         <div class="col-md-8 offset-md-2">
-          <p> Acceptitas offers an effective, personal, and narrative-driven approach to college admissions with the first-hand experience of a Harvard student. Our methods, experience, and unbeatable price distinguish us, but our passion defines us.</p>
+          <p> Acceptitas offers an effective, personal, and narrative-driven approach to college admissions with the <span style="font-weight:bold"> first-hand experience </span> of a Harvard student. Our methods, experience, and <span style="font-weight: bold"> unbeatable price </span> distinguish us, but our passion defines </p>
         </div>
       </div>
       <!-- Call to Action -->
