--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="col-sm-2 text-center">
           <img src="images/services/icons/speech.png" alt="">
           &nbsp;
-          <h6>Mock-Interviews</h6>
+          <h6>Mock Interviews</h6>
         </div>
         <div class="col-sm-2 text-center">
           <img src="images/services/icons/pencil.png" alt="">
