--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="col-sm-2 text-center">
           <img src="images/services/icons/pencil.png" alt="">
           &nbsp;
-          <h6>Editing</h6>
+          <h6>Last-Minute Editing</h6>
         </div>
       </div>
       &nbsp;
