--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="col-sm-2 text-center offset-md-2">
           <img src="images/services/icons/bulb.png" alt="">
           &nbsp;
-          <h6>Strategy</h6>
+          <h6>Strategy Consultations</h6>
         </div>
         <div class="col-sm-2 text-center">
           <img src="images/services/icons/list.png" alt="">
