--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       &nbsp;
       <div class="row">
         <div class="col-md-8 offset-md-2">
-          <p> Acceptitas offers an effective, personal, and narrative-driven approach to college admissions with the <span style="font-weight:bold"> first-hand experience </span> of a Harvard student. Our methods, experience, and <span style="font-weight: bold"> unbeatable price </span> distinguish us, but our passion defines </p>
+          <p> Acceptitas offers an effective, personal, and narrative-driven approach to college admissions with the <span style="font-weight:bold"> first-hand experience </span> of a Harvard student. Our methods, experience, and <span style="font-weight: bold"> unbeatable price </span> distinguish us, but our passion defines us. </p>
         </div>
       </div>
       <!-- Call to Action -->
