--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
       <div class="row">
         <div class="col-md-8 offset-md-2">
           <p>
-            The narrative--a coherent “story” told by a student’s application materials is what helps students distinguish themselves in an increasingly competitive admissions process. Acceptitas offers a wide range of services to help students craft their most compelling narrative through all parts of the college application, with a special focus on the essays. We help those just starting to think about college as well as those who are running up against the deadline. Find descriptions of our services, prices, and packages below. Visit our contact page to reach us by phone or email to schedule a free consultation to talk about your goals and how we can help.
+            Acceptitas offers a wide range of services to help students craft their most compelling narrative through all parts of the college application, with a special focus on the essays. We help those just starting to think about college as well as those who are running up against the deadline. Find descriptions of our services, prices, and packages below. Visit our contact page to reach us by phone or email to schedule a free consultation to talk about your goals and how we can help.
           </p>
         </div>
       </div>
