--- a/contact.html
+++ b/contact.html
@@ -63,8 +63,7 @@
       <div class="row">
         <div class="col-md-8 offset-md-2">
           <p>
-            Placeholder text: On the fence about signing up? Give me a call or
-            email today and we can set up a free consulation!
+            Congratulations! You are one step closer to building your strongest college application. Give us a call or send us an email today to set up a free consultation! Let us know your name and how we should get in contact with you, and we’ll be in touch. Let’s get building!
           </p>
         </div>
       </div>
