--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="row" style="height: 100vh; background-image: url(images/icon_bg.png); background-position: right -5em bottom -17em; background-repeat: no-repeat;">
         <div class="col-md-8 offset-md-2 d-flex align-content-center flex-wrap" id="pitch">
           <p id="elevatorPitch" style="opacity: 0;">
-          Acceptitas is a holistic college application consulting and editing service that empowers students to identify and amplify their unique story across all their application materials. Founded by a current Harvard student, we offer our first hand experience in the college admissions process and strong narrative crafting skills at a fraction of the cost. We help students build their unique narrative, so that they can submit with confidence.
+          Acceptitas is a holistic college application consulting and editing service that empowers students to identify and amplify their unique story across all their application materials. Founded by a current Harvard student, we offer our first hand experience in the college admissions process and strong narrative crafting skills at a fraction of the cost. We help students build their unique narrative, so that they can submit with confidence. More personal. More engaging. More affordable.
           </p>
         </div>
       </div>
