service page edits

--- a/services.html
+++ b/services.html
@@ -64,13 +64,30 @@
       <div class="row">
         <div class="col-md-8 offset-md-2">
           <p>
-            Acceptitas offers a wide range of services to help students craft their most compelling narrative through all parts of the college application, with a special focus on the essays. We help those just starting to think about college as well as those who are running up against the deadline. Find descriptions of our services, prices, and packages below. Visit our contact page to reach us by phone or email to schedule a free consultation to talk about your goals and how we can help.
+            Acceptitas offers a wide range of services to help students craft
+            their most compelling narrative through all parts of the college
+            application, with a special focus on the essays. We help those just
+            starting to think about college as well as those who are running up
+            against the deadline. Find descriptions of our services, prices, and
+            packages below. Visit our contact page to reach us by phone or email
+            to schedule a free consultation to talk about your goals and how we
+            can help.
           </p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 offset-md-2">
-          <img src="images/services/strategy.jpg" alt="strategy" />
+        <div class="col-md-4 col-sm-6 offset-md-2">
+          <div class="overlay-image">
+            <img
+              class="image"
+              src="images/services/strategy.jpg"
+              alt="strategy"
+            />
+            <div class="hover">
+              <div class="text">$Price1</div>
+            </div>
+          </div>
+
           <br />
           <br />
           <h3>Strategy Consultations</h3>
@@ -82,8 +99,17 @@
             refining your story across your application materials.
           </p>
         </div>
-        <div class="col-md-4">
-          <img src="images/services/narrative.jpg" alt="narrative" />
+        <div class="col-md-4 col-sm-6">
+          <div class="overlay-image">
+            <img
+              class="image"
+              src="images/services/narrative.jpg"
+              alt="narrative"
+            />
+            <div class="hover">
+              <div class="text">$Price2</div>
+            </div>
+          </div>
           <br />
           <br />
           <h3>Narrative Assessment</h3>
@@ -98,8 +124,17 @@
       </div>
 
       <div class="row">
-        <div class="col-md-4 offset-md-2">
-          <img src="images/services/interview.jpg" alt="interview" />
+        <div class="col-md-4 col-sm-6 offset-md-2">
+          <div class="overlay-image">
+            <img
+              class="image"
+              src="images/services/interview.jpg"
+              alt="interview"
+            />
+            <div class="hover">
+              <div class="text">$Price3</div>
+            </div>
+          </div>
           <br />
           <br />
           <h3>Mock Interviews</h3>
@@ -111,8 +146,13 @@
             actionable areas of growth for the big day.
           </p>
         </div>
-        <div class="col-md-4">
-          <img src="images/services/edits.jpg" alt="edits" />
+        <div class="col-md-4 col-sm-6">
+          <div class="overlay-image">
+            <img class="image" src="images/services/edits.jpg" alt="edits" />
+            <div class="hover">
+              <div class="text">$Price4</div>
+            </div>
+          </div>
           <br />
           <br />
           <h3>Last Minute Editing</h3>
@@ -124,6 +164,31 @@
         </div>
       </div>
 
+      <!-- Why us -->
+      <div class="row band">
+        <div class="col my-auto text-center">
+          <h1>Packages</h1>
+        </div>
+      </div>
+      <br />
+      <div class="row">
+        <div class="col-sm-2 text-center offset-sm-3">
+          <img src="images/services/icons/bulb.png" alt="" />
+          &nbsp;
+          <h6>Strategy Consultations</h6>
+        </div>
+        <div class="col-sm-2 text-center">
+          <img src="images/services/icons/list.png" alt="" />
+          &nbsp;
+          <h6>Narrative Assessment</h6>
+        </div>
+        <div class="col-sm-2 text-center">
+          <img src="images/services/icons/speech.png" alt="" />
+          &nbsp;
+          <h6>Mock Interviews</h6>
+        </div>
+      </div>
+      &nbsp;
       <!-- Call to Action -->
       <div class="row">
         <div class="col d-flex justify-content-center">
