contact page edits

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,13 @@
 
     <link href="css/styles.css" rel="stylesheet" />
   </head>
-  <body>
+  <body
+    style="
+      background-image: url(images/icon_bg.png);
+      background-position: right -5em bottom 0em;
+      background-repeat: no-repeat;
+    "
+  >
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark">
       <a class="navbar-brand" href="index.html">
@@ -61,9 +67,37 @@
       </div>
       <br />
       <div class="row">
+        <div class="col-6 offset-3">
+          <img src="http://via.placeholder.com/640x360" alt="" />
+          <br />
+        </div>
+      </div>
+      &nbsp;
+      <div class="row">
+        <div class="col-sm-2 text-center offset-sm-3">
+          <img src="images/services/icons/bulb.png" alt="" />
+          &nbsp;
+          <h6>Strategy Consultations</h6>
+        </div>
+        <div class="col-sm-2 text-center">
+          <img src="images/services/icons/list.png" alt="" />
+          &nbsp;
+          <h6>Narrative Assessment</h6>
+        </div>
+        <div class="col-sm-2 text-center">
+          <img src="images/services/icons/speech.png" alt="" />
+          &nbsp;
+          <h6>Mock Interviews</h6>
+        </div>
+      </div>
+      &nbsp;
+      <div class="row">
         <div class="col-md-8 offset-md-2">
           <p>
-            Congratulations! You are one step closer to building your strongest college application. Give us a call or send us an email today to set up a free consultation! Let us know your name and how we should get in contact with you, and we’ll be in touch. Let’s get building!
+            Congratulations! You are one step closer to building your strongest
+            college application. Give us a call or send us an email today to set
+            up a free consultation! Let us know your name and how we should get
+            in contact with you, and we’ll be in touch. Let’s get building!
           </p>
         </div>
       </div>
