about page edits

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
       </div>
       <br />
       <div class="row">
-        <div class="col-md-8 offset-md-2">
+        <div class="col-md-8 offset-md-2 pop">
           <p>
             Acceptitas was founded by Emmet Halm to empower motivated students
             like him to dream big and find their own narrative through his
@@ -80,8 +80,9 @@
           </p>
         </div>
       </div>
+      &nbsp;
       <div class="row">
-        <div class="col-md-8 offset-md-2">
+        <div class="col-md-4 offset-md-2">
           <h3>Hi, I'm Emmet!</h3>
           <p>
             … is what Emmet would say with a big smile if this was written in
@@ -93,6 +94,25 @@
             loves meeting new people, learning what motivates them, and helping
             them maximize their strengths.
           </p>
+        </div>
+        <div class="col-md-4">
+          <div class="overlay-image _b1">
+            <a href="LINK_URL">
+              <img
+                class="image"
+                src="http://via.placeholder.com/150"
+                alt="Alt text"
+              />
+              <div class="normal"></div>
+              <div class="hover">
+                <img
+                  class="image"
+                  src="http://via.placeholder.com/200"
+                  alt="Alt text hover"
+                />
+              </div>
+            </a>
+          </div>
         </div>
       </div>
       <div class="row">
@@ -115,6 +135,13 @@
             application. He created Acceptitas to make college admissions more
             personal, more engaging, and more affordable for students like
             himself.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-8 offset-md-2 text-center">
+          <p>
+            Sentence
           </p>
         </div>
       </div>
