--- a/services.html
+++ b/services.html
@@ -62,7 +62,7 @@
       </div>
       <br />
       <div class="row">
-        <div class="col-md-8 offset-md-2">
+        <div class="col-md-8 offset-md-2 pop">
           <p>
             Acceptitas offers a wide range of services to help students craft
             their most compelling narrative through all parts of the college
@@ -75,6 +75,7 @@
           </p>
         </div>
       </div>
+      &nbsp;
       <div class="row">
         <div class="col-md-4 col-sm-6 offset-md-2">
           <div class="overlay-image">
