--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark">
       <a class="navbar-brand" href="index.html">
-        <img src="images/clear_logo.png" style="width: 150px;" />
+        <img src="images/clear_logo.png" style="width: 300px;" />
       </a>
       <button
         class="navbar-toggler"
@@ -35,7 +35,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html"
               >Home <span class="sr-only">(current)</span></a
@@ -97,21 +97,11 @@
         </div>
         <div class="col-md-4">
           <div class="overlay-image _b1">
-            <a href="LINK_URL">
-              <img
-                class="image"
-                src="http://via.placeholder.com/150"
-                alt="Alt text"
-              />
-              <div class="normal"></div>
-              <div class="hover">
-                <img
-                  class="image"
-                  src="http://via.placeholder.com/200"
-                  alt="Alt text hover"
-                />
-              </div>
-            </a>
+            <img class="image" src="images/profiles/serious.png" alt="Emmet" />
+            <div class="normal"></div>
+            <div class="hover">
+              <img class="image" src="images/profiles/smile.png" alt="Emmet" />
+            </div>
           </div>
         </div>
       </div>
