--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark">
       <a class="navbar-brand" href="index.html">
-        <img src="images/clear_logo.png" style="width: 150px;" />
+        <img src="images/clear_logo.png" style="width: 300px;" />
       </a>
       <button
         class="navbar-toggler"
@@ -35,7 +35,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html"
               >Home <span class="sr-only">(current)</span></a
@@ -81,7 +81,7 @@
           <div class="overlay-image">
             <img
               class="image"
-              src="images/services/strategy.jpg"
+              src="images/services/strategy.png"
               alt="strategy"
             />
             <div class="hover">
@@ -104,7 +104,7 @@
           <div class="overlay-image">
             <img
               class="image"
-              src="images/services/narrative.jpg"
+              src="images/services/narrative.png"
               alt="narrative"
             />
             <div class="hover">
@@ -129,7 +129,7 @@
           <div class="overlay-image">
             <img
               class="image"
-              src="images/services/interview.jpg"
+              src="images/services/interview.png"
               alt="interview"
             />
             <div class="hover">
@@ -149,7 +149,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
           <div class="overlay-image">
-            <img class="image" src="images/services/edits.jpg" alt="edits" />
+            <img class="image" src="images/services/edits.png" alt="edits" />
             <div class="hover">
               <div class="text">$Price4</div>
             </div>
@@ -177,16 +177,19 @@
           <img src="images/services/icons/bulb.png" alt="" />
           &nbsp;
           <h6>Strategy Consultations</h6>
+          <p>Description</p>
         </div>
         <div class="col-sm-2 text-center">
           <img src="images/services/icons/list.png" alt="" />
           &nbsp;
           <h6>Narrative Assessment</h6>
+          <p>Description</p>
         </div>
         <div class="col-sm-2 text-center">
           <img src="images/services/icons/speech.png" alt="" />
           &nbsp;
           <h6>Mock Interviews</h6>
+          <p>Description</p>
         </div>
       </div>
       &nbsp;
