--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark">
       <a class="navbar-brand" href="index.html">
-        <img src="images/clear_logo.png" style="width: 150px;" />
+        <img src="images/clear_logo.png" style="width: 300px;" />
       </a>
       <button
         class="navbar-toggler"
@@ -41,7 +41,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html"
               >Home <span class="sr-only">(current)</span></a
@@ -68,7 +68,7 @@
       <br />
       <div class="row">
         <div class="col-6 offset-3">
-          <img src="http://via.placeholder.com/640x360" alt="" />
+          <img src="images/stock/excited.png" alt="" />
           <br />
         </div>
       </div>
