--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body
@@ -103,9 +106,91 @@
       </div>
     </div>
     <!-- Footer -->
-    <footer id="sticky-footer" class="py-4 text-white-50">
-      <div class="container text-center">
-        <small>Copyright &copy; Your Website</small>
+    <footer id="sticky-footer" class="py-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-6 text-left">
+            <p>
+              <small>Acceptitas LLC, 2020</small> <br />
+              <small>
+                Email:
+              </small>
+              <br />
+              <small>
+                Phone:
+              </small>
+            </p>
+          </div>
+          <div class="col-6 text-right">
+            <p>
+              <small>
+                Icons made by
+                <a
+                  href="https://www.flaticon.com/authors/freepik"
+                  title="Freepik"
+                  >Freepik</a
+                >
+                from
+                <a href="https://www.flaticon.com/" title="Flaticon">
+                  www.flaticon.com</a
+                >
+              </small>
+            </p>
+          </div>
+        </div>
+        <div class="row container d-flex justify-content-center">
+          <div class="col-md-6 grid-margin stretch-card text-center">
+            <div class="template-demo">
+              <a target="_blank" href="https://www.facebook.com/Acceptitas">
+                <button
+                  type="button"
+                  class="btn btn-social-icon btn-facebook btn-rounded"
+                >
+                  <i
+                    class="fa fa-facebook fa-2x"
+                    style="color: var(--white);"
+                  ></i>
+                </button>
+              </a>
+              <a target="_blank" href="https://twitter.com/acceptitas">
+                <button
+                  type="button"
+                  class="btn btn-social-icon btn-twitter btn-rounded"
+                >
+                  <i
+                    class="fa fa-twitter fa-2x"
+                    style="color: var(--white);"
+                  ></i>
+                </button>
+              </a>
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/company/acceptitas/"
+              >
+                <button
+                  type="button"
+                  class="btn btn-social-icon btn-linkedin btn-rounded"
+                >
+                  <i
+                    class="fa fa-linkedin fa-2x"
+                    style="color: var(--white);"
+                  ></i>
+                </button>
+              </a>
+              <a target="_blank" href="https://www.instagram.com/acceptitas/">
+                <button
+                  type="button"
+                  class="btn btn-social-icon btn-instagram btn-rounded"
+                >
+                  <i
+                    class="fa fa-instagram fa-2x"
+                    style="color: var(--white);"
+                  ></i>
+                </button>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
