--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <br>
       <div class="row">
         <div class="col-md-8 offset-md-2">
-            Sentence.
+            Congratulations! You are one step closer to building your strongest college application. Get in contact with us today to set up a free consultation. Click the button below.
         </div>
       </div>
       &nbsp;
@@ -138,7 +138,7 @@
       <div class="row">
         <div class="col d-flex justify-content-center">
           <button type="button" class="align-self-center">
-            <a href="contact.html">Contact page</a>
+            <a href="contact.html">Contact Us</a>
           </button>
         </div>
       </div>
@@ -152,10 +152,10 @@
             <p>
               <small>Acceptitas LLC, 2020</small> <br>
               <small>
-                Email: 
+                Email: contact@acceptitas.com
               </small> <br>
               <small>
-                Phone: 
+                Phone: +1-(214)-930-6576
               </small>
             </p>
 
