--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <!-- Why us -->
       <div class="row band">
         <div class="col my-auto text-center">
-          <h1>Why Us</h1>
+          <h1>Why Us?</h1>
         </div>
       </div>
       <br>
@@ -124,7 +124,7 @@
 
        <div class="row band">
         <div class="col my-auto text-center">
-          <h1>Lets get Building</h1>
+          <h1>Ready to Get Started?</h1>
         </div>
       </div>
       <br>
