--- a/services.html
+++ b/services.html
@@ -88,7 +88,7 @@
               alt="strategy"
             />
             <div class="hover">
-              <div class="text">$Price1</div>
+              <div class="text">$99/hour</div>
             </div>
           </div>
 
@@ -111,7 +111,7 @@
               alt="narrative"
             />
             <div class="hover">
-              <div class="text">$Price2</div>
+              <div class="text">$74/hour</div>
             </div>
           </div>
           <br />
@@ -136,7 +136,7 @@
               alt="interview"
             />
             <div class="hover">
-              <div class="text">$Price3</div>
+              <div class="text">$79</div>
             </div>
           </div>
           <br />
@@ -154,7 +154,7 @@
           <div class="overlay-image">
             <img class="image" src="images/services/edits.png" alt="edits" />
             <div class="hover">
-              <div class="text">$Price4</div>
+              <div class="text">$49</div>
             </div>
           </div>
           <br />
@@ -179,20 +179,20 @@
         <div class="col-sm-2 text-center offset-sm-3">
           <img src="images/services/icons/bulb.png" alt="" />
           &nbsp;
-          <h6>Strategy Consultations</h6>
-          <p>Description</p>
+          <h6>Essentials Package</h6>
+          <p>One strategy meeting, one narrative assessment, one mock interview, and two last-minute edits</p>
         </div>
         <div class="col-sm-2 text-center">
           <img src="images/services/icons/list.png" alt="" />
           &nbsp;
-          <h6>Narrative Assessment</h6>
-          <p>Description</p>
+          <h6>Competetive Package</h6>
+          <p>Up to three strategy meetings, three narrative assessments, three mock interviews, and unlimited last-minute editing</p>
         </div>
         <div class="col-sm-2 text-center">
           <img src="images/services/icons/speech.png" alt="" />
           &nbsp;
-          <h6>Mock Interviews</h6>
-          <p>Description</p>
+          <h6>Elite Package</h6>
+          <p>Unlimited services until you are fully confident in your application</p>
         </div>
       </div>
       &nbsp;
