--- a/services.html
+++ b/services.html
@@ -136,7 +136,7 @@
               alt="interview"
             />
             <div class="hover">
-              <div class="text">$79</div>
+              <div class="text">$79 per session</div>
             </div>
           </div>
           <br />
@@ -154,7 +154,7 @@
           <div class="overlay-image">
             <img class="image" src="images/services/edits.png" alt="edits" />
             <div class="hover">
-              <div class="text">$49</div>
+              <div class="text">$49 per application</div>
             </div>
           </div>
           <br />
@@ -179,19 +179,19 @@
         <div class="col-sm-2 text-center offset-sm-3">
           <img src="images/services/icons/bulb.png" alt="" />
           &nbsp;
-          <h6>Essentials Package</h6>
+          <h6>Essentials Package $399</h6>
           <p>One strategy meeting, one narrative assessment, one mock interview, and two last-minute edits</p>
         </div>
         <div class="col-sm-2 text-center">
           <img src="images/services/icons/list.png" alt="" />
           &nbsp;
-          <h6>Competetive Package</h6>
+          <h6>Competetive Package $899</h6>
           <p>Up to three strategy meetings, three narrative assessments, three mock interviews, and unlimited last-minute editing</p>
         </div>
         <div class="col-sm-2 text-center">
           <img src="images/services/icons/speech.png" alt="" />
           &nbsp;
-          <h6>Elite Package</h6>
+          <h6>Elite Package $1,499</h6>
           <p>Unlimited services until you are fully confident in your application</p>
         </div>
       </div>
