--- a/services.html
+++ b/services.html
@@ -67,7 +67,7 @@
       <div class="row">
         <div class="col-md-8 offset-md-2 pop">
           <p>
-            Acceptitas offers a wide range of services to help students craft their most compelling narrative through all parts of the college application, with a special focus on the essays. We help those just starting to think about college as well as those who are running up against a deadline. All our services are incredibly personal, meaning we will work together 1-on-1 and always be there for your questions. Find descriptions of our services, prices, and packages below. Hover your mouse over a service image to view its price. Visit our contact page to reach us by phone or email to schedule a free consultation to talk about your goals and how we can help.
+           Acceptitas offers a wide range of services to help students craft their most compelling narrative through all parts of the college application and at all stages in the process, with a special focus on the essays. Unlike other companies, all our services are incredibly personal (we’re students after all!), meaning we will work together 1-on-1 and always give you our full attention. Find descriptions of our services, prices, and packages below. Hover your mouse over a service image to view its price. Ready to get started? Visit our contact page to schedule a free consultation!
           </p>
         </div>
       </div>
