--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
       <div class="row">
         <div class="col-md-8 offset-md-2 text-center">
           <p>
-            On the fence? Give us a call to schedule a free consultation to learn more about how we can serve your goals and needs.
+            On the fence? Schedule a free consultation today to learn more about how we can serve your goals and needs.
           </p>
         </div>
       </div>
