--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
     <div class="container-fluid">
       <div class="row band">
         <div class="col my-auto text-center">
-          <h1>Contact Us</h1>
+          <h1>Success Starts Here</h1>
         </div>
       </div>
       <br />
