--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
         <div class="col-md-8 offset-md-2">
           <p>
             Congratulations! You are one step closer to building your strongest
-            college application. Give us a call <b>(214-930-6576)</b> or send us an email <b>(contact@acceptitas.com)</b> today to set
+            college application. Give us a call <a href="tel:+12149306576">(214-930-6576)</a> or send us an email < a href="mailto:contact@acceptitas.com">(contact@acceptitas.com)</a> today to set
             up a free consultation! Let us know your name and how we should get
             in contact with you, and we’ll be in touch. Let’s get building!
           </p>
