--- a/contact.html
+++ b/contact.html
@@ -80,17 +80,17 @@
         <div class="col-sm-2 text-center offset-sm-3">
           <img src="images/services/icons/bulb.png" alt="" />
           &nbsp;
-          <h6>Strategy Consultations</h6>
+          <h6>Call</h6>
         </div>
         <div class="col-sm-2 text-center">
           <img src="images/services/icons/list.png" alt="" />
           &nbsp;
-          <h6>Narrative Assessment</h6>
+          <h6>Schedule Free Consulatation</h6>
         </div>
         <div class="col-sm-2 text-center">
           <img src="images/services/icons/speech.png" alt="" />
           &nbsp;
-          <h6>Mock Interviews</h6>
+          <h6>Build Your Narrative</h6>
         </div>
       </div>
       &nbsp;
