--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
             <p>
               <small>Acceptitas LLC, 2020</small> <br>
               <small>
-                Email: contact@acceptitas.com
+                                      <a href="mailto:contact@acceptitas.com">Email: contact@acceptitas.com</a>
               </small> <br>
               <small>
-                Phone: +1-(214)-930-6576
+                                                                             <a href="tel:+12149306576">Phone: +1-(214)-930-6576</a>
               </small>
             </p>
 
