--- a/about.html
+++ b/about.html
@@ -155,11 +155,11 @@
             <p>
               <small>Acceptitas LLC, 2020</small> <br />
               <small>
-                Email:
+                Email:contact@acceptitas.com
               </small>
               <br />
               <small>
-                Phone:
+                Phone: +1-214-930-6576
               </small>
             </p>
           </div>
