--- a/index.html
+++ b/index.html
@@ -137,9 +137,11 @@
       <!-- Call to Action -->
       <div class="row">
         <div class="col d-flex justify-content-center">
-          <button type="button" class="align-self-center">
-            <a href="contact.html">Contact Us</a>
-          </button>
+          <a href="contact.html">
+            <button type="button" class="align-self-center">
+              Contact Us
+            </button>
+          </a>
         </div>
       </div>
     </div>
