--- a/services.html
+++ b/services.html
@@ -67,7 +67,15 @@
       <div class="row">
         <div class="col-md-8 offset-md-2 pop">
           <p>
-           Acceptitas offers a wide range of services to help students craft their most compelling narrative through all parts of the college application and at all stages in the process, with a special focus on the essays. Unlike other companies, all our services are incredibly personal (we’re students after all!), meaning we will work together 1-on-1 and always give you our full attention. Find descriptions of our services, prices, and packages below. Hover your mouse over a service image to view its price. Ready to get started? Visit our contact page to schedule a free consultation!
+            Acceptitas offers a wide range of services to help students craft
+            their most compelling narrative through all parts of the college
+            application and at all stages in the process, with a special focus
+            on the essays. Unlike other companies, all our services are
+            incredibly personal (we’re students after all!), meaning we will
+            work together 1-on-1 and always give you our full attention. Find
+            descriptions of our services, prices, and packages below. Hover your
+            mouse over a service image to view its price. Ready to get started?
+            Visit our contact page to schedule a free consultation!
           </p>
         </div>
       </div>
@@ -173,28 +181,38 @@
           <img src="images/services/icons/bulb.png" alt="" />
           &nbsp;
           <h6>Essentials Package $399</h6>
-          <p>One strategy meeting, one narrative assessment, one mock interview, and two last-minute edits</p>
+          <p>
+            One strategy meeting, one narrative assessment, one mock interview,
+            and two last-minute edits
+          </p>
         </div>
         <div class="col-sm-2 text-center">
           <img src="images/services/icons/list.png" alt="" />
           &nbsp;
           <h6>Competetive Package $899</h6>
-          <p>Up to three strategy meetings, three narrative assessments, three mock interviews, and unlimited last-minute editing</p>
+          <p>
+            Up to three strategy meetings, three narrative assessments, three
+            mock interviews, and unlimited last-minute editing
+          </p>
         </div>
         <div class="col-sm-2 text-center">
           <img src="images/services/icons/speech.png" alt="" />
           &nbsp;
           <h6>Elite Package $1,499</h6>
-          <p>Unlimited services until you are fully confident in your application</p>
+          <p>
+            Unlimited services until you are fully confident in your application
+          </p>
         </div>
       </div>
       &nbsp;
       <!-- Call to Action -->
       <div class="row">
         <div class="col d-flex justify-content-center">
-          <button type="button" class="align-self-center">
-            <a href="contact.html">Contact page</a>
-          </button>
+          <a href="contact.html">
+            <button type="button" class="align-self-center">
+              Contact Us
+            </button>
+          </a>
         </div>
       </div>
     </div>
