--- a/about.html
+++ b/about.html
@@ -134,16 +134,19 @@
       <div class="row">
         <div class="col-md-8 offset-md-2 text-center">
           <p>
-            On the fence? Schedule a free consultation today to learn more about how we can serve your goals and needs.
+            On the fence? Schedule a free consultation today to learn more about
+            how we can serve your goals and needs.
           </p>
         </div>
       </div>
       <!-- Call to Action -->
       <div class="row">
         <div class="col d-flex justify-content-center">
-          <button type="button" class="align-self-center">
-            <a href="contact.html">Contact page</a>
-          </button>
+          <a href="contact.html">
+            <button type="button" class="align-self-center">
+              Contact Us
+            </button>
+          </a>
         </div>
       </div>
     </div>
