--- a/contact.html
+++ b/contact.html
@@ -98,9 +98,12 @@
         <div class="col-md-8 offset-md-2">
           <p>
             Congratulations! You are one step closer to building your strongest
-            college application. Give us a call <a href="tel:+12149306576">(214-930-6576)</a> or send us an email <a href="mailto:contact@acceptitas.com">(contact@acceptitas.com)</a> today to set
-            up a free consultation! Let us know your name and how we should get
-            in contact with you, and we’ll be in touch. Let’s get building!
+            college application. Give us a call
+            <a href="tel:+12149306576">(214-930-6576)</a> or send us an email
+            <a href="mailto:contact@acceptitas.com">(contact@acceptitas.com)</a>
+            today to set up a free consultation! Let us know your name and how
+            we should get in contact with you, and we’ll be in touch. Let’s get
+            building!
           </p>
         </div>
       </div>
@@ -125,6 +128,25 @@
             <p>
               <small>
                 Icons made by
+                <a
+                  href="https://www.flaticon.com/authors/pixel-perfect"
+                  title="Pixel perfect"
+                  >Pixel perfect</a
+                >
+                from
+                <a href="https://www.flaticon.com/" title="Flaticon">
+                  www.flaticon.com</a
+                >
+                and
+                <a href="https://www.flaticon.com/authors/becris" title="Becris"
+                  >Becris</a
+                >
+                from
+                <a href="https://www.flaticon.com/" title="Flaticon">
+                  www.flaticon.com</a
+                >
+
+                and
                 <a
                   href="https://www.flaticon.com/authors/freepik"
                   title="Freepik"
